[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnet-sso"
version = "0.2.0b2"
description = "RNet SSO Python client library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "rNet Ai"}]
keywords = ["sso", "oauth2", "rnet", "authentication"]

[project.urls]
Homepage = "https://rnetai.org"
Repository = "https://github.com/rNetAi/rnet-sso-python"

[tool.setuptools]
packages = ["rnet_sso"]