[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rnet-oauth"
version = "1.0.1"
description = "RNet OAuth Python client library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "rNet Ai"}]
keywords = ["oauth2", "rnet", "authentication"]

[project.urls]
Homepage = "https://rnetai.org"
Repository = "https://github.com/rNetAi/rnet-oauth-python"

[tool.setuptools]
packages = ["rnet_oauth"]