[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "rnet-oauth"
version = "1.0.2"
description = "RNet OAuth Python client library"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICEN[CS]E*"]
authors = [{name = "rNet Ai"}]
keywords = ["oauth2", "rnet", "authentication"]
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Internet :: WWW/HTTP",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://rnetai.org"
Repository = "https://github.com/rNetAi/rnet-oauth-python"
Issues = "https://github.com/rNetAi/rnet-oauth-python/issues"

[tool.setuptools]
packages = ["rnet_oauth"]